update images in html file

--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
   <title>Akash Mitra | Personal Site</title>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Montaga&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
-  <link rel="icon" href="G:\Udemy_Web_development_course\Web development\CSS-My site\images\favicon.ico">
+  <link rel="icon" href="images\favicon.ico">
 </head>
 
 
 <body>
   <!-- top-continer-->
   <div class="top-container">
-    <img class="cloud-top" src="G:\Udemy_Web_development_course\Web development\CSS-My site\images\cloud.png" alt="">
+    <img class="cloud-top" src="images\cloud.png" alt="">
     <h1>I'm Akash.</h1>
     <h2>a microbiologist.</h2>
-    <img class=" cloud-bottom" src="G:\Udemy_Web_development_course\Web development\CSS-My site\images\cloud.png" alt="">
-    <img class="mountain" src="G:\Udemy_Web_development_course\Web development\CSS-My site\images\mountain.png" alt="">
+    <img class=" cloud-bottom" src="images\cloud.png" alt="">
+    <img class="mountain" src="images\mountain.png" alt="">
   </div>
 
 
   <!-- middle-continer-->
   <div class="middle-container">
     <div class="profile">
-      <img class="profile-image" src="G:\Udemy_Web_development_course\Web development\CSS-My site\images\harry potter.jpg" alt="profile-img">
+      <img class="profile-image" src="images\harry potter.jpg" alt="profile-img">
       <h2>Hello.</h2>
       <p class="profile-paragraph">I am a final year Microbiologist with a keen interest in building and designing websites.
         I know both of those are a little bit on the opposite poles, but I sort of fancy both biology and computer science.</p>
@@ -36,13 +36,13 @@
     <div class="skills">
       <h2 class="my-skills">My Skills.</h2>
       <div class="skill-row">
-        <img class="teaching" src="G:\Udemy_Web_development_course\Web development\CSS-My site\images\teacher.png" alt="teaching-img">
+        <img class="teaching" src="images\teacher.png" alt="teaching-img">
 
         <h3>Explaining and teaching things I understand</h3>
         <p>I can make people understand the stuff that I understand very lucidly. I tend to follow the <em>Feynman's technique</em> which gives me a better flexibility at understanding stuff.</p>
       </div>
       <div class="skill-row">
-        <img class="coding" src="G:\Udemy_Web_development_course\Web development\CSS-My site\images\coding.png" alt="">
+        <img class="coding" src="images\coding.png" alt="">
 
         <h3>Designing websites and infographics</h3>
         <p>Coding and animation have always attracted my attention. I am a novice at both and I am trying to get better as you read.</p>
